[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/UpgradePanel.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/inventory/item_frame.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/inventory/item_frame_chose.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/inventory/itemicon1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=6]
[ext_resource path="res://Roundo-Medium.otf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/images/gui/craftgui/Time.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 7 )

[node name="UpgradeList" type="Panel"]
margin_left = 70.0
margin_top = 70.0
margin_right = 719.0
margin_bottom = 858.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 27.0
margin_top = 70.0
margin_right = 617.0
margin_bottom = 738.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 590.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Button" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 590.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 50 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 26.0
margin_top = 13.0
margin_right = 426.0
margin_bottom = 37.0
text = "Name"
align = 1
autowrap = true

[node name="progress" type="ProgressBar" parent="ScrollContainer/VBoxContainer/Button"]
visible = false
margin_left = 444.0
margin_top = 13.0
margin_right = 576.0
margin_bottom = 37.0
mouse_filter = 2

[node name="UpgradeDescript" type="Panel" parent="."]
visible = false
margin_left = 654.0
margin_right = 1303.0
margin_bottom = 788.0

[node name="Label" type="Label" parent="UpgradeDescript"]
margin_left = 205.0
margin_top = 101.0
margin_right = 425.0
margin_bottom = 125.0
text = "Name"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UpgradeDescript"]
margin_left = 52.0
margin_top = 173.0
margin_right = 594.0
margin_bottom = 368.0
text = "Descript"

[node name="UnlockButton" type="Button" parent="UpgradeDescript"]
margin_left = 242.0
margin_top = 685.0
margin_right = 420.0
margin_bottom = 738.0
text = "Unlock"

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeDescript"]
margin_left = 68.0
margin_top = 573.0
margin_right = 587.0
margin_bottom = 655.0

[node name="Button" type="TextureRect" parent="UpgradeDescript/HBoxContainer"]
visible = false
margin_right = 80.0
margin_bottom = 82.0
texture = ExtResource( 5 )
stretch_mode = 6

[node name="icon" type="TextureRect" parent="UpgradeDescript/HBoxContainer/Button"]
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 76.0
margin_bottom = 76.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="UpgradeDescript/HBoxContainer/Button"]
margin_left = 2.0
margin_top = 84.0
margin_right = 80.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5/10"
align = 1
valign = 1

[node name="Time" type="TextureRect" parent="UpgradeDescript"]
margin_left = 275.0
margin_top = 486.0
margin_right = 311.0
margin_bottom = 539.0
hint_tooltip = "Build progress required"
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="UpgradeDescript/Time"]
margin_left = 57.2263
margin_top = 18.0
margin_right = 113.226
margin_bottom = 42.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "15"

[node name="ActiveUpgrade" type="Panel" parent="."]
margin_left = 1307.0
margin_top = 4.36038
margin_right = 1820.0
margin_bottom = 225.36

[node name="Label" type="Label" parent="ActiveUpgrade"]
margin_left = 49.0
margin_top = 15.0
margin_right = 478.0
margin_bottom = 74.0
text = "Active Upgrade"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="ActiveUpgrade"]
margin_left = 32.5515
margin_top = 162.334
margin_right = 488.552
margin_bottom = 186.334
